@@ -71,6 +71,8 @@
 						javamm.compiler/com.revenat.javamm.compiler.component.impl.expression.builder=ALL-UNNAMED
 						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.component.impl.util=ALL-UNNAMED
+						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.integration=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
